fixed playableCards error, implemented OptionDialog that it saves the Properties

--- a/gui/optiondialog.ui
+++ b/gui/optiondialog.ui
@@ -100,7 +100,7 @@
     <string>Port:</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="languageEdit">
+  <widget class="QLineEdit" name="portEdit">
    <property name="geometry">
     <rect>
      <x>80</x>
