--- a/gui/createserverdialog.ui
+++ b/gui/createserverdialog.ui
@@ -16,7 +16,7 @@
   <widget class="QLabel" name="titlelbl">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>170</x>
      <y>10</y>
      <width>61</width>
      <height>21</height>
@@ -70,63 +70,6 @@
    </property>
    <property name="text">
     <string>Player 3</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="player1txt">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>110</y>
-     <width>113</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Not joined yet</string>
-   </property>
-   <property name="readOnly">
-    <bool>false</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="player2txt">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>160</y>
-     <width>113</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Not joined yet</string>
-   </property>
-   <property name="readOnly">
-    <bool>false</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="player3txt">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>210</y>
-     <width>113</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Not joined yet</string>
-   </property>
-   <property name="readOnly">
-    <bool>false</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="startgamebtn">
@@ -207,43 +150,74 @@
     <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="addAiPlayer">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>250</x>
+     <y>40</y>
+     <width>101</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Add Computer</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="player1statlbl">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>80</x>
      <y>110</y>
-     <width>81</width>
-     <height>23</height>
+     <width>111</width>
+     <height>21</height>
     </rect>
    </property>
+   <property name="frameShape">
+    <enum>QFrame::Box</enum>
+   </property>
    <property name="text">
-    <string>Computer</string>
+    <string>TextLabel</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QLabel" name="player2statlbl">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>80</x>
      <y>160</y>
-     <width>81</width>
-     <height>23</height>
+     <width>111</width>
+     <height>21</height>
     </rect>
    </property>
+   <property name="frameShape">
+    <enum>QFrame::Box</enum>
+   </property>
    <property name="text">
-    <string>Computer</string>
+    <string>TextLabel</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_3">
+  <widget class="QLabel" name="player3statlbl">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>80</x>
      <y>210</y>
-     <width>81</width>
-     <height>23</height>
+     <width>111</width>
+     <height>21</height>
     </rect>
    </property>
+   <property name="frameShape">
+    <enum>QFrame::Box</enum>
+   </property>
    <property name="text">
-    <string>Computer</string>
+    <string>TextLabel</string>
    </property>
   </widget>
  </widget>
