--- a/gui/createserverdialog.ui
+++ b/gui/createserverdialog.ui
@@ -179,7 +179,7 @@
     <enum>QFrame::Box</enum>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>No Player</string>
    </property>
   </widget>
   <widget class="QLabel" name="player2statlbl">
@@ -198,7 +198,7 @@
     <enum>QFrame::Box</enum>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>No Player</string>
    </property>
   </widget>
   <widget class="QLabel" name="player3statlbl">
@@ -217,7 +217,7 @@
     <enum>QFrame::Box</enum>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>No Player</string>
    </property>
   </widget>
  </widget>
